--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,3 +1,17 @@
 spring.security.oauth2.client.registration.google.client-id=111062586146-pj1skrqknn9cbpmh756dvhgr2vcroaa5.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=클라이언트 보안 비밀
+spring.security.oauth2.client.registration.google.client-secret=cO0_IbEj1D9HRFQw3_DwF5NF
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+# registration
+spring.security.oauth2.client.registration.naver.client-id =qLymOxLMAqwT1VY_D1oO
+spring.security.oauth2.client.registration.naver.client-secret = Ib4t0oYDeL
+spring.security.oauth2.client.registration.naver.redirect_uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+# provider
+spring.security.oauth2.client.provider.naver.authorization-uri = https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri = https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri = https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute = response
